# mpk_AIproject_group3

./: .gitignore  AUTHORS  Client.cpp  CubeSolver.cpp  FirstCompile.sh  Gitlearning.txt  Makefile  Makefile.am  Makefile.in  MasterCube.cpp  MasterCube.h  README  README.md  Server.cpp  aclocal.m4  client  compile.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  configure.scan  cubeClass.h  main.cpp  makefile  makefile.am  makefile.in  server  server.cpp  terminalcmd.h
archive/: CubeSolver.cpp  compile.sh  makefile main.o needed by prog2.am  makefile without client server.am  makefile1-no such file or dir.am
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
miscellaneous/: meinmake
src/: MasterCube  MasterCube.cpp  client.cpp  client.h  compile.sh  main.cpp  makefile  makefile.am  makefile.in  masterCube.cpp  masterCube.h  server.cpp  server.h
src/.deps/: CreateClient.Po  CreateServer.Po  DieWithError.Po  cube.Po  cubie.Po  main.Po  masterCube.Po  mastermindcube.Po  solver.Po
